[gd_scene load_steps=16 format=3 uid="uid://dcyxbaf7xr1tm"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_i72wx"]
[ext_resource type="Theme" uid="uid://nf6rb8ma3t81" path="res://Assets/theme.tres" id="2_yn8vt"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="3_uo7td"]
[ext_resource type="Texture2D" uid="uid://8pw7vb0fyw5w" path="res://Assets/wife_profile.jpeg" id="5_mmobc"]

[sub_resource type="Animation" id="Animation_g5nge"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WifeProfile:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.223339, 0.223339)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("dialog:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(590, 145)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RichTextLabel:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_gs74b"]
resource_name = "dialog_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WifeProfile:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.466667),
"transitions": PackedFloat32Array(0.0291573, 0.116629, 1),
"update": 0,
"values": [Vector2(0.223339, 0.223339), Vector2(0.283, 0.283), Vector2(0.223, 0.223)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("dialog:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.833333),
"transitions": PackedFloat32Array(0.0717937, 0.0883884, 1),
"update": 0,
"values": [Vector2(0, 145), Vector2(555, 145), Vector2(590, 145)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RichTextLabel:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.533333, 1),
"transitions": PackedFloat32Array(4.2871, 0.176777, 1),
"update": 0,
"values": [0.0, 0.482759, 1.0]
}

[sub_resource type="Animation" id="Animation_vcoau"]
resource_name = "dialog_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WifeProfile:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.466667, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 0.116629, 0.0291573),
"update": 0,
"values": [Vector2(0.223, 0.223), Vector2(0.283, 0.283), Vector2(0.223339, 0.223339)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("dialog:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0666667, 0.466667, 0.933333),
"transitions": PackedFloat32Array(1, 0.0883884, 0.0717937),
"update": 0,
"values": [Vector2(590, 145), Vector2(555, 145), Vector2(0, 145)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RichTextLabel:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 0.176777, 4.2871),
"update": 0,
"values": [1.0, 0.482759, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yf3fg"]
_data = {
"RESET": SubResource("Animation_g5nge"),
"dialog_in": SubResource("Animation_gs74b"),
"dialog_out": SubResource("Animation_vcoau")
}

[sub_resource type="Animation" id="Animation_ttihn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoseBG/LabelShadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LoseBG/LabelShadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(662, 461.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LoseBG/LabelShadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LoseBG/Label:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LoseBG:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LoseBG/Button:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_j5qqo"]
resource_name = "lose_in"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoseBG/LabelShadow:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.766667, 1.76667, 3),
"transitions": PackedFloat32Array(3.73213, 0.378929, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.28, 1), Vector2(2, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LoseBG/LabelShadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.766667, 1.76667, 3),
"transitions": PackedFloat32Array(3.73213, 0.378929, 1),
"update": 0,
"values": [Vector2(662, 461.5), Vector2(577.33, 461.5), Vector2(361.02, 461.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LoseBG/LabelShadow:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.121569), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LoseBG/Label:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(0.535886, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LoseBG:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.633333, 3),
"transitions": PackedFloat32Array(0.267943, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.796078), Color(1, 1, 1, 0.796078)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LoseBG/Button:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 3.73333, 4.93333),
"transitions": PackedFloat32Array(1, 0.287175, 0.812252),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g8rl2"]
_data = {
"RESET": SubResource("Animation_ttihn"),
"lose_in": SubResource("Animation_j5qqo")
}

[sub_resource type="Animation" id="Animation_ownar"]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.378929, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_q2541"]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667, 0.8),
"transitions": PackedFloat32Array(1.6245, 0.378929),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0cirh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vg7dn"]
_data = {
"FadeIn": SubResource("Animation_ownar"),
"FadeOut": SubResource("Animation_q2541"),
"RESET": SubResource("Animation_0cirh")
}

[node name="Game" type="Node3D"]
process_mode = 3
script = ExtResource("1_i72wx")

[node name="Scene" type="Node3D" parent="."]
process_mode = 1

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="Canvas"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_yn8vt")
script = ExtResource("3_uo7td")

[node name="Prompts" type="VBoxContainer" parent="Canvas/UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -279.0
offset_top = -590.0
offset_right = -61.0
offset_bottom = -102.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 60
alignment = 2

[node name="Hints" type="VBoxContainer" parent="Canvas/UI"]
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = 563.0
offset_bottom = 563.0
theme_override_constants/separation = 60

[node name="DialogTimer" type="Timer" parent="Canvas/UI"]
wait_time = 5.0
one_shot = true

[node name="DialogAnim" type="AnimationPlayer" parent="Canvas/UI"]
libraries = {
"": SubResource("AnimationLibrary_yf3fg")
}

[node name="dialog" type="ColorRect" parent="Canvas/UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -295.0
offset_top = -198.0
offset_right = 295.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 1)

[node name="WifeProfile" type="TextureRect" parent="Canvas/UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -385.0
offset_top = -190.0
offset_right = 187.0
offset_bottom = 382.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.223339, 0.223339)
texture = ExtResource("5_mmobc")

[node name="RichTextLabel" type="RichTextLabel" parent="Canvas/UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -241.0
offset_top = -188.0
offset_right = 278.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 30
text = "Sample Text from your wife. Sample Text from your wife. Sample Text from your wife. Sample Text from your wife. Sample Text from your wife."
scroll_active = false

[node name="LoseAnim" type="AnimationPlayer" parent="Canvas/UI"]
libraries = {
"": SubResource("AnimationLibrary_g8rl2")
}

[node name="FadeAnim" type="AnimationPlayer" parent="Canvas/UI"]
libraries = {
"": SubResource("AnimationLibrary_vg7dn")
}

[node name="Fade" type="ColorRect" parent="Canvas/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)
metadata/_edit_lock_ = true

[node name="SpecialText" type="Label" parent="Canvas/UI"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -450.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200
text = "TEST"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_lock_ = true

[node name="SpecialTimer" type="Timer" parent="Canvas/UI"]
one_shot = true

[node name="SpecialTimerEnd" type="Timer" parent="Canvas/UI"]
one_shot = true

[node name="Pause" type="ColorRect" parent="Canvas/UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.866667)

[node name="paused" type="Label" parent="Canvas/UI/Pause"]
layout_mode = 1
offset_left = 120.0
offset_top = 90.0
offset_right = 815.0
offset_bottom = 330.0
theme_override_font_sizes/font_size = 200
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Resume" type="Button" parent="Canvas/UI/Pause"]
layout_mode = 0
offset_left = 130.0
offset_top = 314.0
offset_right = 603.0
offset_bottom = 412.0
theme_override_font_sizes/font_size = 40
text = "Resume"

[node name="Restart" type="Button" parent="Canvas/UI/Pause"]
layout_mode = 0
offset_left = 130.0
offset_top = 437.0
offset_right = 603.0
offset_bottom = 535.0
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="Quit" type="Button" parent="Canvas/UI/Pause"]
layout_mode = 0
offset_left = 130.0
offset_top = 561.0
offset_right = 603.0
offset_bottom = 659.0
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="LoseBG" type="ColorRect" parent="Canvas/UI"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.177495, 0.177495, 0.177495, 1)
metadata/_edit_lock_ = true

[node name="LabelShadow" type="Label" parent="Canvas/UI/LoseBG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -298.0
offset_top = -78.5
offset_right = 298.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 130
text = "You Lose"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label" type="Label" parent="Canvas/UI/LoseBG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 130
text = "You Lose"
horizontal_alignment = 1
uppercase = true

[node name="Button" type="Button" parent="Canvas/UI/LoseBG"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -186.0
offset_top = -437.0
offset_right = 186.0
offset_bottom = -363.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 35
disabled = true
text = "Try Again"

[node name="HintTimer" type="Timer" parent="Canvas/UI"]

[node name="Music" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[connection signal="timeout" from="Canvas/UI/DialogTimer" to="Canvas/UI" method="_on_dialog_timer_timeout"]
[connection signal="animation_finished" from="Canvas/UI/DialogAnim" to="Canvas/UI" method="_on_dialog_anim_animation_finished"]
[connection signal="animation_finished" from="Canvas/UI/FadeAnim" to="." method="_on_fade_anim_animation_finished"]
[connection signal="timeout" from="Canvas/UI/SpecialTimer" to="Canvas/UI" method="_on_special_timer_timeout"]
[connection signal="timeout" from="Canvas/UI/SpecialTimerEnd" to="Canvas/UI" method="_on_special_timer_end_timeout"]
[connection signal="pressed" from="Canvas/UI/Pause/Resume" to="Canvas/UI" method="_on_resume_pressed"]
[connection signal="pressed" from="Canvas/UI/Pause/Restart" to="Canvas/UI" method="_on_button_pressed"]
[connection signal="pressed" from="Canvas/UI/Pause/Quit" to="Canvas/UI" method="_on_quit_pressed"]
[connection signal="pressed" from="Canvas/UI/LoseBG/Button" to="Canvas/UI" method="_on_button_pressed"]
[connection signal="timeout" from="Canvas/UI/HintTimer" to="Canvas/UI" method="_on_hint_timer_timeout"]
